--- a/Dushimimana_Fabrice_Practical_Day_11/frontend/src/style.css
+++ b/Dushimimana_Fabrice_Practical_Day_11/frontend/src/style.css
@@ -20,7 +20,7 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 8px;
 }
 
 body {
@@ -94,7 +94,7 @@ body {
 .btn--big {
   font-size: 1.8rem;
   padding: 1.6rem 4.8rem;
-  width: 25rem;
+  align-self: flex-start;
 }
 
 .btn--md {
@@ -129,6 +129,12 @@ body {
   text-align: center;
 }
 
+.comment__btn__container {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
 .box {
   display: flex;
   flex-direction: column;
@@ -143,12 +149,16 @@ body {
 }
 
 .header {
-  padding: 1.2rem;
+  padding: 2rem 1.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: var(--color-text-heading);
   background-color: var(--color-white-1);
+}
+
+.header.user {
+  padding: 0.2rem 1.8rem;
 }
 
 .logo:link,
@@ -304,7 +314,7 @@ body {
 .Form label {
   font-weight: 500;
   font-size: 2rem;
-  color: var(--color-green);
+  color: var(--color-primary);
 }
 
 .btn--green,
@@ -573,6 +583,7 @@ body {
 .blog {
   box-shadow: 0 10rem 6.4rem 0 rgba(0, 0, 0, 0.05);
   border-radius: 0.6rem;
+  overflow: hidden;
   cursor: pointer;
   transition: all 0.2s ease-in;
 }
@@ -807,6 +818,7 @@ body {
   max-width: 70rem;
   margin: 7.2rem auto 9.6rem;
   align-self: start;
+  border-radius: 0.5rem;
 }
 
 .Blog__content {
@@ -906,13 +918,6 @@ body {
 .Blog__item {
   font-size: 1.6rem;
   color: #444;
-}
-
-/*? APPLIES ON WIDTH BELOW 1200PX */
-@media only screen and (max-width: 75rem) {
-  html {
-    font-size: 50%;
-  }
 }
 
 /*? APPLIES ON WIDTH BELOW 1000PX */
@@ -1188,7 +1193,6 @@ body {
 }
 
 .comment {
-  /* width: ; */
   display: grid;
   column-gap: 1.2rem;
   grid-template-columns: auto 1fr;
@@ -1198,7 +1202,25 @@ body {
   width: 7rem;
   height: 7rem;
   border-radius: 50%;
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 3;
+}
+
+.comment__btn {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0.4rem 1rem;
+  border-radius: 0.4rem;
+  font-weight: 600;
+  background-color: #007af3;
+  color: #fff;
+}
+
+.comment__edit {
+  margin-right: 0.8rem;
+}
+
+.comment__delete {
+  background-color: crimson;
 }
 
 .comment__email {
@@ -1212,6 +1234,7 @@ body {
   color: #333;
   font-size: 2rem;
   grid-column: 2;
+  margin-bottom: 0.6rem;
 }
 
 .like {
@@ -1222,10 +1245,24 @@ body {
 .like__el {
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 0.6rem;
   font-size: 3.2rem;
   color: #d6336c;
   cursor: pointer;
+}
+
+.loading {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.form__forgot:link,
+.form__forgot:visited {
+  text-decoration: none;
+  color: #007af3;
+  font-size: 1.6rem;
+  text-align: right;
+  transform: translateY(0.6rem);
 }
 
 .like__text {
@@ -1234,8 +1271,8 @@ body {
 }
 
 .user__container {
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   background-color: #007af3;
   font-size: 2.4rem;
@@ -1244,4 +1281,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.message-container {
+  background-color: #112a46;
+  color: #fff;
+  padding: 6.2rem;
+  margin: 5rem auto;
+  font-size: 2rem;
+  line-height: 1.6;
+  width: 50rem;
+  border-radius: 0.5rem;
 }
